Working on non unique cities

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1063,10 +1063,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ushuaia\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a random latitude using numpy random array multiplied by 90 that is the maximum for latitude\n",
+    "# and multiple by a random +1 or -1 to give the North or South from Equator\n",
+    "lat_random = np.array((latitude_max*np.random.rand(1,1))*(np.random.randint(2, size=1)*2-1))\n",
+    "# print(lat_random)\n",
+    "\n",
+    "# Generate a random longitude using numpy random array multiplied by 180 that is the maximum for longitude\n",
+    "# and multiple by a random +1 or -1 to give the East or West from Greenwich\n",
+    "lon_random = np.array(longitude_max*np.random.rand(1,1))*(np.random.randint(2, size=1)*2-1)\n",
+    "\n",
+    "city = citipy.nearest_city(lat_random, lon_random)\n",
+    "new_city = city.city_name.title()\n",
+    "new_city_country = city.country_code.upper()\n",
+    "print(new_city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48    Ushuaia\n",
+      "Name: City, dtype: object\n",
+      "Ushuaia AR is not unique\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute a logical test to see if the city is not already include in the dataframe\n",
+    "test = unique_cities_df['City'].loc[unique_cities_df['City'] == new_city]\n",
+    "print(test)\n",
+    "if test.empty == True:\n",
+    "    print(f'{new_city} {new_city_country} is unique')\n",
+    "    \n",
+    "else:\n",
+    "    print(f'{new_city} {new_city_country} is not unique')\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
